added stykes for subscribe button
added stykes for subscribe button

--- a/content/blog1.html
+++ b/content/blog1.html
@@ -18,6 +18,9 @@
     
     <h2>About Me</h2>
     <p>I'm a passionate writer who loves to explore new topics and share insights.</p>
+    <form>
+       <input type="button" class="subscribe" value="Subscribe" />
+    </form>
 </div>
 
 </body>
